# JogoDaAdivinhacao

./: .gitignore  README.md  jogoDaAdvinhacao.py  pyproject.toml
jogo_da_adivinhacao/: main.py
jogo_da_adivinhacao_renan_martins.egg-info/: SOURCES.txt  entry_points.txt
