[project]
name = "jogo-da-adivinhacao-renan-martins"
version = "0.1.2"
authors = [{ name = "Renan Martins"}]
readme = "README.md"

dependencies = []

[project.scripts]
jogo-adivinha = "jogo_da_adivinhacao.main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
exclude = ["dist", ".git", "__pycache__", "build"]

[tool.ruff.lint]
select = ["E", "W", "F", "C", "B"]
extend-ignore = ["E203"]

